--- a/restaurants_pages/a_la_française.html
+++ b/restaurants_pages/a_la_française.html
@@ -13,7 +13,7 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="../assets/css/styles.css" rel="stylesheet">
-    <title>La palette du goût</title>
+    <title>À la française</title>
 </head>
 
 <body>
@@ -22,22 +22,25 @@
         <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <main>
-        <img src="../assets/images/restaurants/la palette du goût.jpg" alt="Photo du restaurant La palette du goût">
+        <img src="../assets/images/restaurants/A-la-francaise.jpg" alt="Photo du restaurant A la française">
         <section class="menu">
-            <div class="conteneur_coeur">
-                <h1>La palette du goût</h1>
-                <i class="fa-regular fa-heart coeur_vide fa-xl"></i>
-                <i class="fa-solid fa-heart coeur_plein fa-xl"></i>
+            <div class="titre-coeur">
+                <div class="conteneur_coeur_restaurant">
+                    <h1>À la française</h1>
+                    <label class="i-coeur" for="coeurCheckbox1">
+                        <input type="checkbox" id="coeurCheckbox1">
+                        <i class="fa-regular fa-heart coeur_vide"></i>
+                    </label>
+                </div>
             </div>
-    
+
             <div class="section_menu">
-                
                 <h2>ENTRÉES</h2>
 
-                <article class="intitule_plat">
+                <article class="intitule_plat" data-order="1">
                     <div class="description_carte">
-                        <h3>Fricassée d'escargots</h3>
-                        <p>Au piment d'Espelette</p>
+                        <h3>Tartare de poulpe acidulé</h3>
+                        <p>Aux zestes d'orange</p>
                     </div>
                     <span>25€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -45,8 +48,8 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Foie gras de canard mi-cuit</h3>
-                        <p>Et ses copeaux de truffe noir</p>
+                        <h3>Velouté de légumes d'antan</h3>
+                        <p>Carotte, panais, topinambour</p>
                     </div>
                     <span>35€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -54,21 +57,21 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Oeuf au plat</h3>
-                        <p>Assaisonné à la truffe sur le lit de caviar</p>
+                        <h3>Soupe à l'oignon</h3>
+                        <p>Revisitée</p>
                     </div>
                     <span>20€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
                 </article>
             </div>
 
-            <div class="section_menu">
+            <div class="section_menu" data-order="2">
                 <h2>PLATS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Filet de boeuf aux herbes</h3>
-                        <p>Accompagné de sa ribambelle de légumes</p>
+                        <h3>Coquilles Saint-Jacques</h3>
+                        <p>Accompagnées d'une purée de panais</p>
                     </div>
                     <span>40€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -76,8 +79,8 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Parmentier de queue de boeuf</h3>
-                        <p>À la truffe noire sur sa purée de panais</p>
+                        <h3>Magret de canard</h3>
+                        <p>Et parmentier de pommes de terre</p>
                     </div>
                     <span>35€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -85,21 +88,21 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Filet de turbot</h3>
-                        <p>Aux agrumes</p>
+                        <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                        <p>Sur son lit de gnocchis aux légumes</p>
                     </div>
                     <span>44€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
                 </article>
             </div>
 
-            <div class="section_menu">
+            <div class="section_menu" data-order="3">
                 <h2>DESSERTS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Paris-Brest</h3>
-                        <p>Revisité</p>
+                        <h3>Pétales de violettes glacés</h3>
+                        <p>Et purée de noisettes</p>
                     </div>
                     <span>18€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -107,8 +110,8 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Macaron au chocolat d'exception </h3>
-                        <p>Et glace à la vanille de Madagascar</p>
+                        <h3>Fondant au chocolat</h3>
+                        <p>Revisité</p>
                     </div>
                     <span>22€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -116,8 +119,8 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Mousse au chocolat</h3>
-                        <p>Au piment d'Espelette et à la truffe noire</p>
+                        <h3>Millefeuille croustillant</h3>
+                        <p>Myrtilles et pâte d’amande</p>
                     </div>
                     <span>23€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -125,7 +128,6 @@
             </div>
             <button class="commander">
                 <p>Commander</p>
-            </button>
         </section>
     </main>
     <footer>
