--- a/restaurants_pages/la_note_enchantee.html
+++ b/restaurants_pages/la_note_enchantee.html
@@ -13,7 +13,7 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="../assets/css/styles.css" rel="stylesheet">
-    <title>Le délice des sens</title>
+    <title>La note enchantée</title>
 </head>
 
 <body>
@@ -22,21 +22,25 @@
         <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <main>
-        <img src="../assets/images/restaurants/Le délice des sens.jpg" alt="Photo du restaurant Le délice des sens">
+        <img src="../assets/images/restaurants/La-note-enchantee.jpg" alt="Photo du restaurant La note enchantée">
         <section class="menu">
-            <div class="conteneur_coeur">
-                <h1>Le délice des des sens</h1>
-                <i class="fa-regular fa-heart coeur_vide fa-xl"></i>
-                <i class="fa-solid fa-heart coeur_plein fa-xl"></i>
+            <div class="titre-coeur">
+                <div class="conteneur_coeur_restaurant">
+                    <h1>La note enchantée</h1>
+                    <label class="i-coeur" for="coeurCheckbox1">
+                        <input type="checkbox" id="coeurCheckbox1">
+                        <i class="fa-regular fa-heart coeur_vide"></i>
+                    </label>
+                </div>
             </div>
 
-            <div class="section_menu">
+            <div class="section_menu" data-order="1">
                 <h2>ENTRÉES</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Tartare de thon</h3>
-                        <p>Assaisonné au yuzu</p>
+                        <h3>Ravioles de foie gras </h3>
+                        <p>Accompagnées de leur crème à la truffe</p>
                     </div>
                     <span>25€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -44,8 +48,8 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Bouchée de homard croustillant </h3>
-                        <p>Et sa farandole de petits légumes</p>
+                        <h3>Caviar osciètre </h3>
+                        <p>Sur blini à la farine de blé noir</p>
                     </div>
                     <span>35€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -53,21 +57,30 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Poulet rôti aux herbes de Provence </h3>
-                        <p>Et sa crème de truffe</p>
+                        <h3>Homard et espuma de potiron</h3>
+                        <p>Marinés aux zestes d'orange</p>
                     </div>
-                    <span>40€</span>
+                    <span>20€</span>
+                    <div class="check"><i class="fa-solid fa-check"></i></div>
+                </article>
+
+                <article class="intitule_plat">
+                    <div class="description_carte">
+                        <h3>Foie gras de canard cuit entier</h3>
+                        <p>Confiture de figue et pain toasté</p>
+                    </div>
+                    <span>35€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
                 </article>
             </div>
 
-            <div class="section_menu">
+            <div class="section_menu" data-order="2">
                 <h2>PLATS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Poulet rôti aux herbes de Provence </h3>
-                        <p>Et sa crème de truffe</p>
+                        <h3>Noix de coquilles Saint-Jacques</h3>
+                        <p>Sur lit de purée de céleri-rave</p>
                     </div>
                     <span>40€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -75,8 +88,8 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Langouste rôtie </h3>
-                        <p>Et ses légumes de saison</p>
+                        <h3>Langoustine poêlée</h3>
+                        <p>Purée de patate douce</p>
                     </div>
                     <span>35€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -84,21 +97,21 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Côte de bœuf Angus </h3>
-                        <p>Et sa purée de panais</p>
+                        <h3>Mijoté de queue de bœuf </h3>
+                        <p>Et riz sauvage aux zestes de citron</p>
                     </div>
-                    <span>44€</span>
+                    <span>45€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
                 </article>
             </div>
 
-            <div class="section_menu">
+            <div class="section_menu" data-order="3">
                 <h2>DESSERTS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Farandole de desserts</h3>
-                        <p>Du chef</p>
+                        <h3>Macaron noisette et chocolat</h3>
+                        <p>Glace au caramel brun et sel de Guérande</p>
                     </div>
                     <span>18€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -106,8 +119,8 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Crème brulée </h3>
-                        <p>Revisitée</p>
+                        <h3>Baba au rhum revisité </h3>
+                        <p>Avec son coulis de citron</p>
                     </div>
                     <span>22€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -115,14 +128,16 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Tiramisu</h3>
-                        <p>À la noisette</p>
+                        <h3>Tarte au citron meringuée </h3>
+                        <p>Déstructurée</p>
                     </div>
                     <span>23€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
                 </article>
             </div>
-            <button class="commander"><p>Commander</p></button>
+            <button class="commander">
+                <p>Commander</p>
+            </button>
         </section>
     </main>
     <footer>
