--- a/restaurants_pages/la_palette_du_gout.html
+++ b/restaurants_pages/la_palette_du_gout.html
@@ -13,7 +13,7 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="../assets/css/styles.css" rel="stylesheet">
-    <title>La note enchantée</title>
+    <title>La palette du goût</title>
 </head>
 
 <body>
@@ -22,21 +22,26 @@
         <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <main>
-        <img src="../assets/images/restaurants/La note enchantée.jpg" alt="Photo du restaurant La note enchantée">
+        <img src="../assets/images/restaurants/la-palette-du-gout.jpg" alt="Photo du restaurant La palette du goût">
         <section class="menu">
-            <div class="conteneur_coeur">
-                <h1>La note enchantée</h1>
-                <i class="fa-regular fa-heart coeur_vide fa-xl"></i>
-                <i class="fa-solid fa-heart coeur_plein fa-xl"></i>
+            <div class="titre-coeur">
+                <div class="conteneur_coeur_restaurant">
+                    <h1>La palette du goût</h1>
+                    <label class="i-coeur" for="coeurCheckbox1">
+                        <input type="checkbox" id="coeurCheckbox1">
+                        <i class="fa-regular fa-heart coeur_vide"></i>
+                    </label>
+                </div>
             </div>
 
-            <div class="section_menu">
+            <div class="section_menu" data-order="1">
+
                 <h2>ENTRÉES</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Ravioles de foie gras </h3>
-                        <p>Accompagnées de leur crème à la truffe</p>
+                        <h3>Fricassée d'escargots</h3>
+                        <p>Au piment d'Espelette</p>
                     </div>
                     <span>25€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -44,8 +49,8 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Caviar osciètre </h3>
-                        <p>Sur blini à la farine de blé noir</p>
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <p>Et ses copeaux de truffe noir</p>
                     </div>
                     <span>35€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -53,30 +58,21 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Homard et espuma de potiron</h3>
-                        <p>Marinés aux zestes d'orange</p>
+                        <h3>Oeuf au plat</h3>
+                        <p>Assaisonné à la truffe sur le lit de caviar</p>
                     </div>
                     <span>20€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
                 </article>
-
-                <article class="intitule_plat">
-                    <div class="description_carte">
-                        <h3>Foie gras de canard cuit entier</h3>
-                        <p>Confiture de figue et pain toasté</p>
-                    </div>
-                    <span>35€</span>
-                    <div class="check"><i class="fa-solid fa-check"></i></div>
-                </article>
             </div>
 
-            <div class="section_menu">
+            <div class="section_menu" data-order="2">
                 <h2>PLATS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Noix de coquilles Saint-Jacques</h3>
-                        <p>Sur lit de purée de céleri-rave</p>
+                        <h3>Filet de boeuf aux herbes</h3>
+                        <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
                     <span>40€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -84,8 +80,8 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Langoustine poêlée</h3>
-                        <p>Purée de patate douce</p>
+                        <h3>Parmentier de queue de boeuf</h3>
+                        <p>À la truffe noire sur sa purée de panais</p>
                     </div>
                     <span>35€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -93,21 +89,21 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Mijoté de queue de bœuf </h3>
-                        <p>Et riz sauvage aux zestes de citron</p>
+                        <h3>Filet de turbot</h3>
+                        <p>Aux agrumes</p>
                     </div>
-                    <span>45€</span>
+                    <span>44€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
                 </article>
             </div>
 
-            <div class="section_menu">
+            <div class="section_menu" data-order="3">
                 <h2>DESSERTS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Macaron noisette et chocolat</h3>
-                        <p>Glace au caramel brun et sel de Guérande</p>
+                        <h3>Paris-Brest</h3>
+                        <p>Revisité</p>
                     </div>
                     <span>18€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -115,8 +111,8 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Baba au rhum revisité </h3>
-                        <p>Avec son coulis de citron</p>
+                        <h3>Macaron au chocolat d'exception </h3>
+                        <p>Et glace à la vanille de Madagascar</p>
                     </div>
                     <span>22€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
@@ -124,14 +120,16 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h3>Tarte au citron meringuée </h3>
-                        <p>Déstructurée</p>
+                        <h3>Mousse au chocolat</h3>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <span>23€</span>
                     <div class="check"><i class="fa-solid fa-check"></i></div>
                 </article>
             </div>
-            <button class="commander"><p>Commander</p></button>
+            <button class="commander">
+                <p>Commander</p>
+            </button>
         </section>
     </main>
     <footer>
