--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="./assets/css/styles.css" rel="stylesheet">
     <title>Ohmyfood</title>
-</head>
 
 <body>
     <div class="loader">
@@ -35,7 +34,7 @@
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'éxcepetion, selectionnés par nos soins</p>
             <button>
-                <span>
+                <span id="spanA">
                 Explorer nos restaurants
                 </span>
             </button>
